  - `read-file` has been renamed to `read-list`.
  - The procedures for random numbers have been reimplemented;
    access to system-specific entropy is available, together with a reasonably
    good pseudo random number generator (WELL512).
  - `glob` now returns an empty list for non-existent or inaccessible
    directories, instead of erroring out.

- Module system
  - The compiler has been modularised, for improved namespacing.  This
    means names from the compiler should not leak out into the compiled
    program's (macro) namespace anymore.
  - The core units have been converted to modules under the "chicken"
    namespace.
  - Added support for list-style library names.
  - The "use" and "use-for-syntax" special forms have been removed
    in favor of "import" and "import-for-syntax" to reduce confusion.

- Syntax expander
  - Removed support for (define-syntax (foo e r c) ...), which was
    undocumented and not officially supported anyway.
  - Removed support for normal "lambda" forms as syntax transformers,
    which has been deprecated since 4.8.0.
  - define and friends are now aggressively rejected in "expression
    contexts" (i.e., anywhere but toplevel or as internal defines).
  - define-record and define-record-type now create record types
    which are tagged with the module in which they're defined, so
    predicates no longer return #t for records with the same tag
    defined in another module. This tag is now also available under
    an identifier that matches the record type name (fixes #1342).

- Eggs management
  - Egg-installation and building has been completely overhauled.
  - .meta + .setup files have been merged into a single declarative
    ".egg" file.
  - More static checks for egg descriptions, simplified generation
    of OS-specific build + install commands that is (hopefully)
    more practical for package maintainers.
  - Egg sources are cached locally to reduce download and rebuild
    times.